--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,32 @@
-.App {
-  text-align: center;
+.toggleButton button{
+  background-color: #fff;
+  border: none;
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.toggleButton {
+  border:1px solid black;
+  border-radius: 50px;  
+  width: 150px;
+  height: 30px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between; 
+}
+
+.union {
+  background-color: blue !important;
   color: white;
+  border-radius: 50px;
+  width: 50%;
 }
 
-.App-link {
-  color: #61dafb;
+.container .row {
+  height: 180px;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container .row div {
+  border:1px solid black;
+  width: 180px;
+  height: 180px; 
 }
